<resources>
    <string name="app_name">LiteApp</string>

    <string name="bottom_home">首页</string>
    <string name="header_home">卓越尊尚会</string>
    <string name="bottom_college">卓越学院</string>
    <string name="header_college">卓越学院</string>
    <string name="college_new">新人学院</string>
    <string name="college_lite">直播课堂</string>
    <string name="college_data">资料库</string>
    <string name="college_law">法律专区</string>
    <string name="college_onlite">正在直播</string>
    <string name="college_prelite">直播预告</string>
    <string name="college_beflite">往期推荐</string>
    <string name="college_law_done">已解答</string>
    <string name="college_law_undone">未解答</string>
    <string name="college_law_reply">回复区</string>
    <string name="college_law_replyto">回答</string>
    <string name="college_law_ask">我要提问</string>
    <string name="live_detail">直播详情</string>
    <string name="live_give">送礼</string>
    <string name="live_reply">说点什么互动一下...</string>
    <string name="live_author_like">喜欢</string>
    <string name="live_author_haslike">已喜欢</string>
    <string name="facebook_app_id">1964233977152758</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">jFRczHoA7jym7X9DYOG6IMQab</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">X3hYoUjklg5c3QpLi6MPx487nmGSGjlMm77kTAWMeRJPt9Xmlu</string>
    <string name="home_page_recomment">推荐</string>
    <string name="course_live">课程直播</string>
    <string name="more">更多</string>
    <string name="new_info">最新资讯</string>
    <string name="introduce">介绍</string>
    <string name="activity">活动</string>
    <string name="information">资讯</string>
    <string name="hotinformation">热点资讯</string>
    <string name="lifecode">生命密码</string>
    <string name="medicallecture">医疗讲座</string>
    <string name="medame">医美讲座</string>
    <string name="industry">行业动态</string>
    <string name="course_detail">课程详情</string>
    <string name="course_description">课程描述</string>
    <string name="course_attend">参加课程</string>
    <string name="activity_detail">活动详情</string>
    <string name="activity_description">活动描述</string>
    <string name="activity_attend">参加活动</string>
    <string name="confirm_order">确认订单</string>
    <string name="select_coupon">选择优惠券</string>
    <string name="commit_order">提交订单</string>
    <string name="cancel">取消</string>
    <string name="HKD">HKD</string>
    <string name="select_function">选择支付方式</string>
    <string name="wechat">wechat</string>
    <string name="ali">支付宝</string>
    <string name="credit_card">信用卡</string>
    <string name="paypal">paypal</string>
    <string name="pay_order">支付订单</string>
    <string name="payment">去支付</string>
    <string name="select">选择</string>
    <string name="course_comment">课程评论</string>
    <string name="activity_comment">活动评论</string>
    <string name="write_comment">写评论...</string>
    <string name="send">发送</string>
    <string name="loading">正在努力加载中.....</string>
    <string name="new_info_detail">资讯详情</string>
    <string name="hot_act">热门活动</string>
    <string name="new_information">最新资讯</string>
    <string name="shop">尊尚商城</string>
    <string name="guess_interest">猜你喜欢</string>
    <string name="share_wechat_frient">微信好友</string>
    <string name="share_wechat_zone">微信朋友圈</string>
    <string name="share_qqzone">QQ空间</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_twitter">Twitter</string>
    <string name="share_linkedin">Linked in</string>
    <string name="share_qr">活动二维码</string>
</resources>
