<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f7f8"
    android:orientation="vertical">

    <first.net.liteapp.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cus_title"
        app:title="@string/live_detail"
        app:isShowBack="true"/>

    <RelativeLayout
        android:id="@+id/rlyt_player"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/py606"
        android:background="#ff000000">

        <com.tencent.rtmp.ui.TXCloudVideoView
            android:id="@+id/video_tx"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/iv_fullscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/video_tx"
            android:layout_alignParentRight="true"
            android:background="@mipmap/live_zoom"
            android:padding="@dimen/px10"
            android:layout_marginRight="@dimen/px51"
            android:layout_marginBottom="@dimen/px39"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/py24"
            android:layout_marginLeft="@dimen/py36"
            android:padding="@dimen/px6"
            android:layout_alignTop="@+id/video_tx"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/back"
            android:id="@+id/iv_videoback"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_catagory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/video_tx"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="高清"
            android:textColor="@color/color_f58585"
            android:visibility="gone"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/tlyt_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/py135"
            app:tabIndicatorColor="@color/color_f58585"
            app:tabIndicatorHeight="@dimen/py10"
            app:tabTextColor="@color/color_333333" />


        <android.support.v4.view.ViewPager
            android:id="@+id/vp_tab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/py1"
        android:background="@color/color_999999"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/py138"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_flower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/live_flower"
            android:layout_marginLeft="@dimen/px30"/>

        <TextView
            android:id="@+id/tv_reply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/px30"
            android:layout_marginRight="@dimen/px30"
            android:background="@drawable/rectangle_gray_small_item_bg"
            android:layout_marginTop="@dimen/py15"
            android:layout_marginBottom="@dimen/py15"
            android:text="@string/live_reply"
            android:gravity="center_vertical"
            android:textColor="@color/color_999999"
            android:paddingLeft="@dimen/px30"/>

        <TextView
            android:id="@+id/tv_give"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px30"
            android:drawableTop="@mipmap/live_gift"
            android:text="@string/live_give"
            android:textColor="@color/color_999999"
            android:textSize="12sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/py1"
        android:background="@color/color_999999"
        android:layout_marginBottom="@dimen/py30"/>

</LinearLayout>