<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <first.net.liteapp.view.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/confirm_order"
        app:isShowBack="true"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/py1"
        android:background="@color/color_f1f1f1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/py40">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="@dimen/py300"
            android:layout_height="@dimen/py240"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/py20">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333333"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/py20"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/py20">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_999999"
                    android:textSize="14sp"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_f58585"
                    android:textSize="14sp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/py1"
        android:background="@color/color_f1f1f1"/>

    <RelativeLayout
        android:id="@+id/rl_coupon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/py140"
        android:paddingLeft="@dimen/py30"
        android:paddingRight="@dimen/py30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/select_coupon"
            android:textSize="16sp"
            android:textColor="@color/color_333333"
            android:layout_alignParentLeft="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true">
            <TextView
                android:id="@+id/tv_coupon_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_999999"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/py80"
                android:background="@mipmap/right_arrow"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/py30"
        android:background="@color/color_f1f1f1"/>

    <TextView
        android:id="@+id/tv_commit_order"
        android:layout_width="@dimen/py500"
        android:layout_height="@dimen/py140"
        android:layout_marginTop="@dimen/py100"
        android:text="@string/commit_order"
        android:textColor="@color/color_ffffff"
        android:textStyle="bold"
        android:background="@drawable/shape_commit_order"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>